package com.company;

public enum Activities {
    NOTICE,
    REMEMBER,
    GUESSING
}
