package com.company;

public enum Clothes {
    All_CLOTHES,
    DRESS,
    SHIRT,
    JUMPER,
    PYJAMAS
}
