package com.company;

import java.util.Objects;

public interface Description {
    public String getDescription(PassiveObject object, String content, String author);




}
