package com.company.Exception;

public class DethException extends RuntimeException{
    public DethException(String condition){
        super(condition);
    }

}